fixed navbar collapse issue

--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -44,14 +44,14 @@ svg {
     font-size: 3rem !important;
 }
 
-.show {
+.show-proj {
     display: none;
 }
 
-.overlay:hover .show {
+.proj-overlay:hover .show-proj {
     display: block;
 }
 
-.overlay:hover {
+.proj-overlay:hover {
     background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5))
 }
